src/org/graphstream/stream/file/pajek/PajekParser.java
/* Generated By:JavaCC: Do not edit this line. PajekParser.java */
/*
 * Copyright 2006 - 2011 
 *     Julien Baudry	<julien.baudry@graphstream-project.org>
 *     Antoine Dutot	<antoine.dutot@graphstream-project.org>
 *     Yoann Pigné		<yoann.pigne@graphstream-project.org>
 *     Guilhelm Savin	<guilhelm.savin@graphstream-project.org>
 * 
 * This file is part of GraphStream <http://graphstream-project.org>.
 * 
 * GraphStream is a library whose purpose is to handle static or dynamic
 * graph, create them from scratch, file or any source and display them.
 * 
 * This program is free software distributed under the terms of two licenses, the
 * CeCILL-C license that fits European law, and the GNU Lesser General Public
 * License. You can  use, modify and/ or redistribute the software under the terms
 * of the CeCILL-C license as circulated by CEA, CNRS and INRIA at the following
 * URL <http://www.cecill.info> or under the terms of the GNU LGPL as published by
 * the Free Software Foundation, either version 3 of the License, or (at your
 * option) any later version.
 * 
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 * PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more details.
 * 
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 * The fact that you are presently reading this means that you have had
 * knowledge of the CeCILL-C and LGPL licenses and that you accept their terms.
 */
package org.graphstream.stream.file.pajek;

import java.io.InputStream;
import java.io.IOException;
import java.io.Reader;

import java.util.ArrayList;

import org.graphstream.stream.file.FileSourcePajek;
import org.graphstream.util.parser.ParseException;
import org.graphstream.util.parser.Parser;
import org.graphstream.util.parser.SimpleCharStream;
import org.graphstream.util.parser.Token;
import org.graphstream.util.parser.TokenMgrError;

@SuppressWarnings("unused")
public class PajekParser implements Parser, PajekParserConstants {
	// The node count.
	int nodeCount;
	// If true we are parsing the vertices labels.
	// False as soon as we encounter the arcs.
	boolean inVertices = true;
	// If true the list of edges is a edge list.
	boolean edgeListMode = true;

	PajekContext ctx;

	public PajekParser(FileSourcePajek pajek, InputStream stream) {
		this(stream);
		this.ctx = new PajekContext(pajek);
	}

	public PajekParser(FileSourcePajek pajek, Reader stream) {
		this(stream);
		this.ctx = new PajekContext(pajek);
	}

	public void open() {
	}

	/**
	 * Closes the parser, closing the opened stream.
	 */
	public void close() throws IOException {
		jj_input_stream.close();
	}

	/*****************************************************************/
	/* The parser. */
	/*****************************************************************/

	/** Unused rule, call it to slurp in the whole file. */
	final public void all() throws ParseException {
		label_1: while (true) {
			if (jj_2_1(2)) {
				network();
			} else if (jj_2_2(2)) {
				vertices();
			} else if (jj_2_3(2)) {
				edges();
			} else if (jj_2_4(2)) {
				jj_consume_token(COMMENT);
			} else if (jj_2_5(2)) {
				jj_consume_token(EOL);
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			if (jj_2_6(2)) {
				;
			} else {
				break label_1;
			}
		}
		jj_consume_token(0);
	}

	final public boolean next() throws ParseException {
		boolean ok = true;
		Token k;
		if (jj_2_7(2)) {
			network();
		} else if (jj_2_8(2)) {
			vertices();
		} else if (jj_2_9(2)) {
			edges();
		} else if (jj_2_10(2)) {
			k = jj_consume_token(COMMENT);
			System.err.printf("got comment %s%n", k.image);
		} else if (jj_2_11(2)) {
			jj_consume_token(EOL);
		} else if (jj_2_12(2)) {
			jj_consume_token(0);
			ok = false;
		} else {
			jj_consume_token(-1);
			throw new ParseException();
		}
		{
			if (true)
				return ok;
		}
		throw new Error("Missing return statement in function");
	}

	final public void network() throws ParseException {
		Token k;
		StringBuffer buf = new StringBuffer();
		boolean first = true;
		jj_consume_token(NETWORK);
		label_2: while (true) {
			if (jj_2_13(2)) {
				;
			} else {
				break label_2;
			}
			if (jj_2_14(2)) {
				k = jj_consume_token(STRING);
				if (!first)
					buf.append(" ");
				buf.append(k.image.substring(1, k.image.length() - 1));
				first = false;
			} else if (jj_2_15(2)) {
				k = jj_consume_token(KEY);
				if (!first)
					buf.append(" ");
				buf.append(k.image);
				first = false;
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		ctx.addGraphAttribute("ui.label", buf.toString());
		EO();
	}

	// Vertices
	final public void vertices() throws ParseException {
		Token n;
		jj_consume_token(VERTICES);
		n = jj_consume_token(INT);
		EO();
		nodeCount = ctx.addNodes(n);
		label_3: while (true) {
			if (jj_2_16(2)) {
				;
			} else {
				break label_3;
			}
			if (jj_2_17(2)) {
				vertex();
			} else if (jj_2_18(2)) {
				jj_consume_token(COMMENT);
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	final public void vertex() throws ParseException {
		Token id, k, x, y, z = null, sh;
		String label = null, value;
		NodeGraphics graphics = null;
		id = jj_consume_token(INT);
		if (jj_2_53(2)) {
			k = validIdentifier();
			label = k.image;
			if (jj_2_52(2)) {
				if (jj_2_19(2)) {
					x = jj_consume_token(REAL);
				} else if (jj_2_20(2)) {
					x = jj_consume_token(INT);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
				if (jj_2_21(2)) {
					y = jj_consume_token(REAL);
				} else if (jj_2_22(2)) {
					y = jj_consume_token(INT);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
				if (jj_2_25(2)) {
					if (jj_2_23(2)) {
						z = jj_consume_token(REAL);
					} else if (jj_2_24(2)) {
						z = jj_consume_token(INT);
					} else {
						jj_consume_token(-1);
						throw new ParseException();
					}
				} else {
					;
				}
				ctx.addNodePosition(id.image, x, y, z);
				if (jj_2_32(2)) {
					if (jj_2_26(2)) {
						k = jj_consume_token(ELLIPSE);
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("shape", "circle", k);
					} else if (jj_2_27(2)) {
						k = jj_consume_token(BOX);
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("shape", "box", k);
					} else if (jj_2_28(2)) {
						k = jj_consume_token(TRIANGLE);
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("shape", "triangle", k);
					} else if (jj_2_29(2)) {
						k = jj_consume_token(CROSS);
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("shape", "cross", k);
					} else if (jj_2_30(2)) {
						k = jj_consume_token(DIAMOND);
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("shape", "diamond", k);
					} else if (jj_2_31(2)) {
						k = jj_consume_token(EMPTY);
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("shape", "circle", k);
					} else {
						jj_consume_token(-1);
						throw new ParseException();
					}
				} else {
					;
				}
				label_4: while (true) {
					if (jj_2_33(2)) {
						;
					} else {
						break label_4;
					}
					if (jj_2_34(2)) {
						k = jj_consume_token(SIZE);
						value = number();
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("s_size", value, k);
					} else if (jj_2_35(2)) {
						k = jj_consume_token(XFACT);
						value = number();

					} else if (jj_2_36(2)) {
						k = jj_consume_token(YFACT);
						value = number();

					} else if (jj_2_37(2)) {
						k = jj_consume_token(PHI);
						value = number();

					} else if (jj_2_38(2)) {
						k = jj_consume_token(R);
						value = number();

					} else if (jj_2_39(2)) {
						k = jj_consume_token(Q);
						value = number();

					} else if (jj_2_40(2)) {
						k = jj_consume_token(IC);
						value = color();
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("ic", value, k);
					} else if (jj_2_41(2)) {
						k = jj_consume_token(BC);
						value = color();
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("bc", value, k);
					} else if (jj_2_42(2)) {
						k = jj_consume_token(BW);
						value = number();
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("bw", value, k);
					} else if (jj_2_43(2)) {
						k = jj_consume_token(LC);
						value = color();
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("lc", value, k);
					} else if (jj_2_44(2)) {
						k = jj_consume_token(LA);
						value = number();

					} else if (jj_2_45(2)) {
						k = jj_consume_token(LR);
						value = number();

					} else if (jj_2_46(2)) {
						k = jj_consume_token(LPHI);
						value = number();

					} else if (jj_2_47(2)) {
						k = jj_consume_token(FOS);
						value = number();
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("fos", value, k);
					} else if (jj_2_48(2)) {
						k = jj_consume_token(FONT);
						value = keyOrString();
						if (graphics == null)
							graphics = new NodeGraphics();
						graphics.addKey("font", value, k);
					} else {
						jj_consume_token(-1);
						throw new ParseException();
					}
				}
				label_5: while (true) {
					if (jj_2_49(2)) {
						;
					} else {
						break label_5;
					}
					if (jj_2_50(2)) {
						k = validIdentifier();
					} else if (jj_2_51(2)) {
						k = jj_consume_token(REAL);
					} else {
						jj_consume_token(-1);
						throw new ParseException();
					}
					System.err.printf("%d:%d: unparsed garbage in .net (%s)%n",
							k.beginLine, k.beginColumn, k.image);
				}
			} else {
				;
			}
		} else {
			;
		}
		EO();
		if (label != null) {
			if (label.startsWith("\u005c""))
				label = label.substring(1, label.length() - 1);
			ctx.addNodeLabel(id.image, label);
		}
		if (graphics != null)
			ctx.addNodeGraphics(id.image, graphics);
	}

	// Edges and edge lists.
	final public void edges() throws ParseException {
		if (jj_2_66(2)) {
			jj_consume_token(ARCS);
			EO();
			edgeListMode = false;
			inVertices = false;
			ctx.setDirected(true);
			label_6: while (true) {
				if (jj_2_54(2)) {
					;
				} else {
					break label_6;
				}
				if (jj_2_55(2)) {
					edge();
				} else if (jj_2_56(2)) {
					jj_consume_token(COMMENT);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
		} else if (jj_2_67(2)) {
			jj_consume_token(EDGES);
			EO();
			edgeListMode = false;
			inVertices = false;
			ctx.setDirected(false);
			label_7: while (true) {
				if (jj_2_57(2)) {
					;
				} else {
					break label_7;
				}
				if (jj_2_58(2)) {
					edge();
				} else if (jj_2_59(2)) {
					jj_consume_token(COMMENT);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
		} else if (jj_2_68(2)) {
			jj_consume_token(ARCSLIST);
			EO();
			edgeListMode = true;
			inVertices = false;
			ctx.setDirected(true);
			label_8: while (true) {
				if (jj_2_60(2)) {
					;
				} else {
					break label_8;
				}
				if (jj_2_61(2)) {
					edgeList();
				} else if (jj_2_62(2)) {
					jj_consume_token(COMMENT);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
		} else if (jj_2_69(2)) {
			jj_consume_token(EDGESLIST);
			EO();
			edgeListMode = true;
			inVertices = false;
			ctx.setDirected(false);
			label_9: while (true) {
				if (jj_2_63(2)) {
					;
				} else {
					break label_9;
				}
				if (jj_2_64(2)) {
					edgeList();
				} else if (jj_2_65(2)) {
					jj_consume_token(COMMENT);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
		} else if (jj_2_70(2)) {
			matrix();
		} else if (jj_2_71(2)) {
			jj_consume_token(COMMENT);
		} else {
			jj_consume_token(-1);
			throw new ParseException();
		}
	}
